Changelog
=========

0.6.5 - 
------------------

- Fixed erroneous OLLAMA_URL documentaion.
  [gerroon] 

- Documentation improvements.
  [tylerlocnguyen]

- When Ollama throws an exception while generating a response, capture
  it and show a notification to the user.
  [ggozad]

0.6.4 - 2024-09-28
------------------

- Command to pull/update model.
  [ggozad]

- ESC dismisses the splash screen.
  [ggozad]


0.6.3 - 2024-09-25
------------------

- Fix typo preventing build on FreeBSD.
  [nivit]

- Allow disabling the splash screen.
  [ggozad]

0.6.2 - 2024-09-25
------------------

- Fix creating a new chat when no chats are available.
  [ggozad]

- Fancy splash screen using textualeffects.
  [ggozad]

0.6.1 - 2024-09-24
------------------

- Add support for tools/function calling.
  [ggozad]

- Fix newline insertion in multi-line widget.
  [ggozad]

0.5.2 - 2024-09-06
------------------

- Fix crash when starting the app without an existing db.
  [ggozad]

0.5.1 - 2024-09-06
------------------

- Persist changed parameters when editing a chat.
  [ggozad]

- Add (id) column to message table.
  [ggozad]

- Command to regenerate last ollama response.
  [ggozad]

0.5.0 - 2024-09-04
------------------

- Add support for the command palette. Move most chat-related actions there.
  [ggozad]

0.4.4 - 2024-08-30
------------------

- Restore shortcut for command palette that overrided our choice for adding images.
  [ggozad]

0.4.3 - 2024-08-28
------------------

- Force utf-8 when exporting messages to a file.
  [ggozad]

- Migrate to using uv instead of poetry for packaging/dependency management.
  [ggozad]

0.4.2 - 2024-08-20
------------------

- Remove patch to TextArea & restore tab handling.
  [ggozad]

0.4.1 - 2024-08-20
------------------

- Use 127.0.0.1 as the default host for Ollama.
  [ggozad]

0.4.0 - 2024-08-19
------------------

- Use stored messages and chat API instead of context and generate API.
  [yilmaz08, ggozad]

0.3.1 - 2024-08-14